@@ -1,3 +1,6 @@
+Upcoming:
+- The builder and shield projector use a better fake player that matches the name of the real player if online
+
 1.16-3.1.0:
 - Small fix for mojang mappings
 - The space chamber has been ported
